--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
       <section id="contact" class="section">
         <div class="contact-content">
           <h2>Get in Touch</h2>
-          <form id="contact-form" class="contact-form">
+          <form id="contact-form" class="contact-form" name="contact-form" netlify>
             <div class="form-group">
               <input type="text" id="name" required>
               <label for="name">Name</label>
